[TVB#124] handle deprecations, fix JGoodiesLooks